--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.9",
-    "typescript": "^5.0.3",
     "web-vitals": "^2.1.4",
     "yup": "^1.0.2"
   },
@@ -49,5 +48,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.57.1",
+    "@typescript-eslint/parser": "^5.57.1",
+    "eslint": "^8.37.0",
+    "typescript": "^5.0.3"
   }
 }
